# -*- eval: (cargo-minor-mode 1) -*-

[workspace]
members = [".", "./derive"]

[package]
name = "openapi_type"
version = "0.2.4"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2021"
rust-version = "1.56"
description = "OpenAPI type information for Rust structs and enums"
keywords = ["openapi", "type"]
license = "Apache-2.0"
repository = "https://github.com/msrd0/openapi_type"
readme = "crates-io.md"
include = ["src/**/*", "LICENSE", "crates-io.md"]

[dependencies]
indexmap = "1.7"
linked-hash-map = "0.5.4"
openapi_type_derive = { path = "./derive", version = "0.2.5" }
openapiv3 = "=1.0.0"
serde_json = "1.0"

# optional dependencies / features
chrono = { version = "0.4.19", default-features = false, optional = true }
time = { version = "0.3.4", features = ["serde-human-readable"], optional = true }
uuid = { version = "0.8.2", optional = true }

[dev-dependencies]
paste = "1.0"
pretty_assertions = "1.0"
serde = { version = "1.0", features = ["derive"] }
trybuild = "=1.0.53"
