# -*- eval: (cargo-minor-mode 1) -*-

[workspace]
members = [".", "./derive"]

[package]
name = "openapi_type"
version = "0.4.2"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2021"
rust-version = "1.58"
description = "OpenAPI type information for Rust structs and enums"
keywords = ["openapi", "type"]
license = "Apache-2.0"
repository = "https://github.com/msrd0/openapi_type"
readme = "crates-io.md"
include = ["src/**/*", "LICENSE", "crates-io.md"]

[features]
chrono = ["chrono04"]
linked-hash-map = ["linked-hash-map05"]
time = ["time03"]
uuid = ["uuid08", "uuid1"]

[dependencies]
indexmap = "1.7"
openapi_type_derive = { path = "./derive", version = "0.4.4" }
openapiv3 = "1.0"
serde_json = "1.0"

# optional dependencies / features
chrono04 = { package = "chrono", version = "0.4", default-features = false, optional = true }
linked-hash-map05 = { package = "linked-hash-map", version = "0.5", optional = true }
time03 = { package = "time", version = "0.3", features = ["serde-human-readable"], optional = true }
uuid08 = { package = "uuid", version = "0.8", optional = true }
uuid1 = { package = "uuid", version = "1", optional = true }

[dev-dependencies]
paste = "1.0"
pretty_assertions = "1.0"
serde = { version = "1.0.158", features = ["derive"] }
trybuild = "=1.0.80"
