# -*- eval: (cargo-minor-mode 1) -*-

[package]
workspace = ".."
name = "openapi_type_derive"
version = "0.4.2"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2021"
rust-version = "1.58"
description = "Implementation detail of the openapi_type crate"
license = "Apache-2.0"
repository = "https://github.com/msrd0/openapi_type"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serde_derive_internals = "0.26"
syn = "2.0"
syn-path = "2.0"
